tests/invalid/e002_if_let.pak
-- EXPECT: E002
-- Pak has no 'if let' — that is Rust syntax.
-- Conditional variable binding must use 'match' instead.

entry {
    let x: i32 = 5
    if let y = x { }
}
